--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,6 +22,6 @@
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
-    "./semantic-release-nuget.js"
+    "@gabbium/semantic-release-nuget"
   ]
 }
