--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,12 +9,7 @@
         "changelogFile": "CHANGELOG.md"
       }
     ],
-    [
-      "@semantic-release/github",
-      {
-        "assets": ["src/CleanArch/bin/Release/*.nupkg"]
-      }
-    ],
+    ["@semantic-release/github"],
     [
       "@semantic-release/git",
       {
