--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: Release
+name: CD Pipeline
 
 on:
   push:
@@ -6,6 +6,8 @@ on:
 
 jobs:
   release:
+    name: Build & Release
+
     runs-on: ubuntu-latest
 
     permissions:
@@ -19,12 +21,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Setup Node.js 23.x
         uses: actions/setup-node@v4
         with:
           node-version: 23.x
 
-      - name: Setup .NET SDK
+      - name: Setup .NET 9.0.x
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: "9.0.x"
@@ -37,4 +39,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
-
