--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build
+name: CI Pipeline
 
 on:
   workflow_dispatch:
@@ -7,8 +7,11 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+env:
+  CI: true
+
 jobs:
-  build:
+  quality-checks:
     runs-on: ubuntu-latest
 
     permissions:
@@ -20,13 +23,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Java
+      - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
           distribution: "zulu"
 
-      - name: Setup .NET
+      - name: Setup .NET 9.0.x
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 9.0.x
@@ -37,15 +40,16 @@ jobs:
           export PATH="$PATH:/home/runner/.dotnet/tools"
 
       - name: Run SonarCloud Scan
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           dotnet sonarscanner begin \
             /k:"gabbium_dotnet-cleanarch-aspnetcore" \
             /n:"dotnet-cleanarch-aspnetcore" \
             /o:"gabbium" \
             /d:sonar.host.url="https://sonarcloud.io" \
-            /d:sonar.token="${{ secrets.SONAR_TOKEN }}" \
-            /d:sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml \
-            /d:sonar.exclusions="semantic-release-nuget.js"
+            /d:sonar.token="$SONAR_TOKEN" \
+            /d:sonar.cs.opencover.reportsPaths=**/coverage.opencover.xml
           dotnet build --configuration Release
           dotnet test --configuration Release --no-build --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
-          dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
+          dotnet sonarscanner end /d:sonar.token="$SONAR_TOKEN"
